# lazurite-desktop

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  dprint.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation_improvement.yml  feature_request.yml
docs/: code-quality.md  design.md  todo.md
docs/designs/: composer.html  explorer.html  follow-mgmt.html  login.html  messages.html  multicol.html  notifications.html  profile.html  publications.html  reading.html  search.html  settings.html  social-diagnostics.html  timeline.html
docs/specs/: auth.md  drafts.md  explorer.md  feeds.md  follow-hygiene.md  media.md  multicolumn.md  mvp.md  profile.md  release.md  search.md  settings.md  social-diagnostics.md  standard-site.md  timeline.md  v0.2.md
docs/tasks/: 01-backend-setup.md  02-auth.md  03-feeds.md  03-timeline.md  04-notifications.md  05-explorer.md  06-search.md  06-settings.md  07-search.md  07-standard-site.md  08-multicolumn.md  08-release.md  08-settings.md  08-social-diagnostics.md  09-jetstream.md  09-multicolumn.md  09-profile.md  10-jetstream.md  10-release.md  10-spacedust.md  11-multicolumn.md  11-spacedust.md  12-release.md  12-social-diagnostics.md  13-release.md  14-drafts.md  15-media.md  16-follows.md  mvp.md
patches/: jacquard-oauth-0.11-chat-scope.patch
src/: App.css  App.tsx  index.tsx  router.test.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: actors.rs  auth.rs  columns.rs  commands.rs  constellation.rs  conversations.rs  db.rs  diagnostics.rs  drafts.rs  error.rs  explorer.rs  feed.rs  lib.rs  main.rs  media.rs  moderation.rs  notifications.rs  search.rs  settings.rs  state.rs  tray.rs
src-tauri/src/commands/: columns.rs  diagnostics.rs  drafts.rs  explorer.rs  media.rs  mod.rs  moderation.rs  search.rs  settings.rs
src-tauri/src/migrations/: 001_initial.sql  002_auth_storage.sql  003_oauth_sessions_without_fk.sql  004_account_avatars.sql  005_sync_state.sql  006_app_settings.sql  007_search_owner_scope.sql  008_columns.sql  009_columns_expand_kinds.sql  010_embeddings_opt_in.sql  011_drafts.sql  012_labeler_cache.sql
src/components/: AccountButtons.tsx  AccountLedger.tsx  AccountSwitcher.tsx  AccountSwitcherIdentity.tsx  AccountSwitcherMenuList.tsx  AccountSwitcherRow.tsx  AppRail.tsx  AvatarBadge.test.tsx  AvatarBadge.tsx  ErrorToast.tsx  LoginPanel.test.tsx  LoginPanel.tsx  ProfileSkeleton.tsx  RailButton.test.tsx  RailButton.tsx  ReauthBanner.tsx  Session.test.tsx  Session.tsx  Wordmark.test.tsx  Wordmark.tsx
src/components/account/: AccountButtons.tsx  AccountLedger.tsx  AccountSwitcher.test.tsx  AccountSwitcher.tsx  AccountSwitcherRow.tsx  (+3 more)
src/contexts/: app-preferences.tsx  app-session.test.tsx  app-session.tsx  app-shell-ui.tsx
src/lib/: conversations.ts  explorer-navigation.ts  external-url.ts  feeds.test.ts  feeds.ts  moderation.ts  navigation-history.ts  post-engagement-routes.test.ts  post-engagement-routes.ts  post-events.ts  post-rich-text.ts  post-routes.test.ts  post-routes.ts  profile.test.ts  profile.ts  search-routes.ts  theme.ts  type-guards.ts  types.ts
src/test/: providers.tsx  setup.ts
(+249 files in other folders)
