[package]
name = "lazurite-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["Owais J. <me@desertthunder.dev>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lazurite_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.28", features = ["json"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
jacquard = "0.11.0"
sqlite-vec = "0.1.7"
fastembed = "5.13.0"
hf-hub = "0.5"
tokio = "1.50.0"
tauri-plugin-deep-link = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
thiserror = "2.0.18"

# TODO: add this later
# [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# tauri-plugin-updater = "2"


[lints.clippy]
bool_comparison = "deny"
duplicate_mod = "deny"
inconsistent_struct_constructor = "deny"
invalid_regex = "deny"
mem_forget = "deny"
mixed_case_hex_literals = "deny"
suspicious_arithmetic_impl = "deny"
uninit_assumed_init = "deny"
suspicious_else_formatting = "deny"
suspicious_op_assign_impl = "deny"
suspicious_to_owned = "deny"
cmp_owned = "deny"
cmp_null = "deny"
manual_map = "deny"

too_many_arguments = "warn"
cognitive_complexity = "warn"
large_enum_variant = "warn"
needless_borrow = "warn"
needless_pass_by_value = "warn"
redundant_clone = "warn"
unnecessary_cast = "warn"
inefficient_to_string = "warn"
or_fun_call = "warn"
unnecessary_to_owned = "warn"
map_clone = "warn"
flat_map_identity = "warn"
needless_collect = "warn"
vec_init_then_push = "warn"

len_zero = "allow"
range_plus_one = "allow"
manual_range_contains = "allow"
result_large_err = "allow"
